fix(Hash Table): contains bug